--- a/style_add_form.css
+++ b/style_add_form.css
@@ -10,15 +10,32 @@ html, body, #container
     height: 100%;
     max-height: 1440px;
     max-width: 2560px;
-    background-color: burlywood;
+    background-color: rgb(31, 31, 31);
+}
+
+h1
+{
+    color: white;
+}
+
+label
+{
+    color: white;
 }
 
 .back
 {
     position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(43, 87, 46);
     text-decoration: none;
+    width: 50px;
+    height: 20px;
+    color: white;
     font-size: larger;
-    color: rgb(60, 107, 60);
+    transition-duration: .5s;
     left: 10px;
     top: 10px;
 }
@@ -45,6 +62,14 @@ html, body, #container
 {
     width: 100%;
     height: 50px;
+    transition-duration: .5s;
+}
+
+input[type="button"]:hover
+{
+    background-color: rgb(43, 87, 46);
+    color: white;
+    cursor: pointer;
 }
 
 #form_container input[type="radio"]
@@ -73,17 +98,17 @@ html, body, #container
 
 .example-2 .btn-tertiary
 {
-    color:#555;
+    color:white;
     padding:0;
     line-height:40px;
     width:100%;
     display:block;
-    border:2px solid #555;
+    border:2px solid white;
 }
 .example-2 .btn-tertiary:hover,.example-2 .btn-tertiary:focus
 {
-    color:#888;
-    border-color:#888;
+    color:rgb(47, 114, 52);
+    border-color:rgb(47, 114, 52);
 }
 .example-2 .input-file
 {
