--- a/style_add_form.css
+++ b/style_add_form.css
@@ -61,6 +61,8 @@ label
 .input, #form_container article
 {
     width: 100%;
+    max-width: 100%;
+    max-height: 100px;
     height: 50px;
     transition-duration: .5s;
 }
