Добавил сохранение фотографий в базе

--- a/style_add_form.css
+++ b/style_add_form.css
@@ -139,6 +139,11 @@ input[type="button"]:hover
     color:#5AAC7B;
 }
 
+input[type="radio"], label
+{
+    cursor: pointer;
+}
+
 @media screen and (max-width: 768px)
 {
     #form_container
