--- a/style_index.css
+++ b/style_index.css
@@ -4,10 +4,10 @@
     padding: 0px;
 }
 
-html
+html, body
 {
     min-height: 100%;
-}
+} 
 
 body
 {
@@ -130,7 +130,7 @@ main
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
-    height: 100vh;
+    height: 100%;
 }
 
 .book
@@ -178,6 +178,7 @@ main
     width: 250px;
     height: 350px;
     background-color: rgb(47, 75, 63);
+    margin-bottom: 5px;
 }
 
 .img img
