--- a/style_index.css
+++ b/style_index.css
@@ -54,6 +54,11 @@ body
     z-index: 1000;
 }
 
+h2
+{
+    margin-top: 25px;
+}
+
 h2, h3, h4
 {
     color: rgb(255, 255, 255);
@@ -140,7 +145,7 @@ main
     align-items: center;
     justify-content: center;
     width: 400px;
-    height: 500px;
+    height: 550px;
 }
 
 .manipulation_book
@@ -155,7 +160,7 @@ main
 .comment
 {
     border: 0;
-    height: 100%;
+    height: 30px;
     width: 150px;
     transition-duration: .5s;
 }
@@ -189,4 +194,26 @@ main
     transform: translate(-50%, -50%);
     max-width:100%;
     max-height: 100%;
+}
+
+.img p 
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    opacity: 0;
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.9);
+    z-index: 2;
+    padding: 10px;
+}
+
+.img p:hover
+{
+    opacity: 0.8;
 }
