--- a/style_index.css
+++ b/style_index.css
@@ -56,7 +56,6 @@ body
 
 h2
 {
-    margin-top: 25px;
     text-align: center;
 }
 
@@ -144,7 +143,8 @@ main
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
+    padding: 15px 0px;
     width: 400px;
     height: 550px;
 }
